Updated index.html content

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <h2>Support</h2>
         <p>Need help? Contact us or check out our FAQs.</p>
         <ul>
-            <li><a href="#">Contact Support</a></li>
+            <li><a href="#">Contact Support2</a></li>
             <li><a href="#">FAQs</a></li>
         </ul>
     </section>
