--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 DevOps Consulting Sales Training</p>
+        <p>&copy; 2024 DevOps Consulting Sales Training</p><!-- Test change to verify Git workflow -->
     </footer>
 </body>
 </html>
