Updated curriculum to start with SDLC

--- a/index.html
+++ b/index.html
@@ -31,31 +31,35 @@
     <section id="curriculum">
         <h2>Curriculum</h2>
         <div class="module">
-            <h3>Module 1: Introduction to DevOps</h3>
-            <p>Understand the fundamentals of DevOps and its business value.</p>
+            <h3>Module 1: Introduction to Software Development Lifecycle (SDLC)</h3>
+            <p>Understand the fundamentals of the Software Development Lifecycle (SDLC) and how it forms the foundation for DevOps.</p>
         </div>
         <div class="module">
-            <h3>Module 2: The DevOps Toolchain</h3>
+            <h3>Module 2: Introduction to DevOps</h3>
+            <p>Explore the basics of DevOps and its role in enhancing the SDLC.</p>
+        </div>
+        <div class="module">
+            <h3>Module 3: The DevOps Toolchain</h3>
             <p>Familiarize yourself with essential tools and processes within a DevOps pipeline.</p>
         </div>
         <div class="module">
-            <h3>Module 3: Selling DevOps Consulting Services</h3>
-            <p>Learn strategies for selling DevOps consulting effectively.</p>
+            <h3>Module 4: Selling DevOps Consulting Services</h3>
+            <p>Equip the team with strategies for selling DevOps consulting.</p>
         </div>
         <div class="module">
-            <h3>Module 4: Mapping Atlassian to DevOps</h3>
-            <p>Leverage your Atlassian expertise to add value in DevOps discussions.</p>
+            <h3>Module 5: Mapping Atlassian to DevOps</h3>
+            <p>Leverage existing Atlassian expertise to add value in DevOps discussions.</p>
         </div>
         <div class="module">
-            <h3>Module 5: Case Studies and Success Stories</h3>
-            <p>Explore real-world examples of successful DevOps implementations.</p>
+            <h3>Module 6: Case Studies and Success Stories</h3>
+            <p>Learn from real-world examples to better understand the impact of DevOps.</p>
         </div>
         <div class="module">
-            <h3>Module 6: Advanced Sales Techniques</h3>
+            <h3>Module 7: Advanced Sales Techniques</h3>
             <p>Enhance your sales techniques specific to DevOps consulting.</p>
         </div>
         <div class="module">
-            <h3>Module 7: Continuous Learning and Improvement</h3>
+            <h3>Module 8: Continuous Learning and Improvement</h3>
             <p>Encourage ongoing education and staying updated with industry trends.</p>
         </div>
     </section>
